fixed horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,4 @@
   color: #61dafb;
 }
 
+body { max-width: 100%; overflow-x: hidden; }
